--- a/Resources/Prototypes/_bean/Maps/snappeabean.yml
+++ b/Resources/Prototypes/_bean/Maps/snappeabean.yml
@@ -37,20 +37,20 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 - type: gameMap
-  id: Atlas
-  mapName: Atlas
-  mapPath: /Maps/_Goobstation/atlas.yml
+  id: SnapPeaBean
+  mapName: SnapPea
+  mapPath: /Maps/_bean/snappeabean.yml
   minPlayers: 5
   maxPlayers: 20
   stations:
-    Atlas:
+    SnapPeaBean:
       stationProto: StandardNanotrasenStation
       components:
         - type: StationNameSetup
-          mapNameTemplate: '{0} Atlas {1}'
+          mapNameTemplate: '{0} Snap Pea {1}'
           nameGenerator:
             !type:NanotrasenNameGenerator
-            prefixCreator: 'R4' # R4407/Goon. GS isn't as cool sounding.
+            prefixCreator: 'BS' # R4407/Goon. GS isn't as cool sounding.
         - type: StationJobs
           availableJobs:
             #service
