--- a/Resources/Maps/_bean/snappeabean.yml
+++ b/Resources/Maps/_bean/snappeabean.yml
@@ -53,7 +53,7 @@ entities:
   - uid: 1
     components:
     - type: MetaData
-      name: Atlas Map
+      name: SnapPea
     - type: Transform
     - type: Map
       mapPaused: True
@@ -63,7 +63,7 @@ entities:
   - uid: 2
     components:
     - type: MetaData
-      name: Atlas
+      name: SnapPea
     - type: Transform
       pos: 2.2710133,-2.4148211
       parent: 1
@@ -2989,7 +2989,7 @@ entities:
           - 0
         chunkSize: 4
     - type: BecomesStation
-      id: Atlas
+      id: SnapPeaBean
     - type: OccluderTree
     - type: SpreaderGrid
     - type: Shuttle
