--- a/Resources/Prototypes/_bean/Entities/Structures/sunlight.yml
+++ b/Resources/Prototypes/_bean/Entities/Structures/sunlight.yml
@@ -1,7 +1,8 @@
 - type: entity
   id: PoweredInvisibleSunlight
   name: sunlight
-  description: Hey, wait, you're not supposed to see this..!
+  description: Hey, wait, you're not supposed to see this..! Using box as placeholder sprite.
+  suffix: DEBUG
   components:
   - type: Sprite
     sprite: /Textures/Objects/Storage/boxes.rsi # remember to remove/comment this out lmao
